--- a/index.html
+++ b/index.html
@@ -5,48 +5,66 @@
     <!-- Add viewport to support responsiveness -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <!-- Container or wrapper -->
-    <div class="container">
-      <!-- Header contains logo and name -->
-      <header class="row">
-        <!-- logo -->
-        <div class="col-xs-4 col-sm-2">
-          <img src="resources\logo.png" alt="">
-        </div>
-        <!-- name and title -->
-        <div class="col-xs-8 col-sm-10">
-          <h1 class="text-right">Amina Arkoub</h1>
-          <p class="text-right">FRONT-END WEB DEVELOPER</p>
-        </div>
-      </header>
 
-      <hr>
+    <header class="row">
+      <!-- logo -->
+      <div class="col-xs-4 col-sm-2">
+        <img src="img/logo.png" alt="udacity logo" class="logo-img">
+      </div>
+      <!-- name -->
+      <div class="col-xs-8 col-sm-10">
+        <h1 class="text-right text-uppercase">Amina Arkoub</h1>
+        <h4 class="text-right text-uppercase">Front-end web developer</h4>
+      </div>
+    </header>
 
-      <!-- Banner or jumbotron -->
-      <div class="row">
-        <div class="col-xs-12">
-            <img src="resources\jumbotron.jpg" alt="">
+    <hr>
+
+    <section class="row">
+      <div class="col-xs-12">
+        <img src="img/banner.jpg" alt="laptop with html code" class="banner-img">
+      </div>
+    </section>
+
+    <section class="row">
+      <h2 class="col-xs-12">Featured Projects</h2>
+      <div class="card col-xs-4">
+        <img class="card-img-top" src="img/sunflower.jpeg" alt="Card image cap">
+        <div class="card-block">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
-
-      <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-4">
-          <img class="image_container" src="resources/appify.jpeg" alt="">
-          <h2>APPIFY</h2>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-4">
-          <img class="image_container" src="resources\sunflower.jpeg" alt="">
-          <h2>SUNFLOWER</h2>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-4">
-          <img class="image_container" src="resources/bokeh.jpeg" alt="">
-          <h2>BOKEH</h2>
+      <div class="card col-xs-4">
+        <img class="card-img-top" src="img/sunflower.jpeg" alt="Card image cap">
+        <div class="card-block">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
-    </div>
-    </body>
+      <div class="card col-xs-4">
+        <img class="card-img-top" src="img/sunflower.jpeg" alt="Card image cap">
+        <div class="card-block">
+          <h4 class="card-title">Card title</h4>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    </section>
+
+    <hr>
+
+    <footer>
+      Copyright. &copy;
+    </footer>
+
+  </body>
 </html>
