--- a/index.html
+++ b/index.html
@@ -5,66 +5,78 @@
     <!-- Add viewport to support responsiveness -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="css/reset.css">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet" type="text/css">
+    <!-- <link rel="stylesheet" href="css/reset.css"> -->
+    <link href="https://fonts.googleapis.com/css?family=Lora|Montez|Montserrat|Raleway|Shadows+Into+Light+Two" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
 
-    <header class="row">
-      <!-- logo -->
-      <div class="col-xs-4 col-sm-2">
-        <img src="img/logo.png" alt="udacity logo" class="logo-img">
-      </div>
-      <!-- name -->
-      <div class="col-xs-8 col-sm-10">
-        <h1 class="text-right text-uppercase">Amina Arkoub</h1>
-        <h4 class="text-right text-uppercase">Front-end web developer</h4>
-      </div>
-    </header>
-
-    <hr>
-
-    <section class="row">
-      <div class="col-xs-12">
-        <img src="img/banner.jpg" alt="laptop with html code" class="banner-img">
-      </div>
-    </section>
-
-    <section class="row">
-      <h2 class="col-xs-12">Featured Projects</h2>
-      <div class="card col-xs-4">
-        <img class="card-img-top" src="img/sunflower.jpeg" alt="Card image cap">
-        <div class="card-block">
-          <h4 class="card-title">Card title</h4>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+    <div class="container">
+      <header class="row">
+        <!-- logo -->
+        <div class="col-xs-4 col-sm-2">
+          <img src="img/logo.png" alt="udacity logo" class="logo-img">
         </div>
-      </div>
-      <div class="card col-xs-4">
-        <img class="card-img-top" src="img/sunflower.jpeg" alt="Card image cap">
-        <div class="card-block">
-          <h4 class="card-title">Card title</h4>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+        <!-- name -->
+        <div class="col-xs-8 col-sm-10">
+          <h1 class="text-right text-uppercase">Amina Arkoub</h1>
+          <h4 class="text-right text-uppercase">Front-end web developer</h4>
         </div>
-      </div>
-      <div class="card col-xs-4">
-        <img class="card-img-top" src="img/sunflower.jpeg" alt="Card image cap">
-        <div class="card-block">
-          <h4 class="card-title">Card title</h4>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+      </header>
+
+      <hr>
+
+      <section class="row">
+        <div class="col-xs-12">
+          <img src="img/html.jpeg" class="rounded-circle" alt="laptop, pen,and html book">
         </div>
-      </div>
-    </section>
+      </section>
 
-    <hr>
+      <section>
 
-    <footer>
-      Copyright. &copy;
-    </footer>
+        <header class="row">
+          <div class="col-xs-12">
+            <h2 class="text-uppercase m-3">Featured Projects</h2>
+          </div>
+        </header>
+
+        <main class="row">
+          <div class="card col-xs-4">
+            <img class="card-img-top" src="img/sunflower.jpeg" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title">Card title</h4>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+          <div class="card col-xs-4">
+            <img class="card-img-top" src="img/sunflower.jpeg" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title">Card title</h4>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+          <div class="card col-xs-4">
+            <img class="card-img-top" src="img/sunflower.jpeg" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title">Card title</h4>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </main>
+
+      </section>
+
+      <hr>
+
+      <footer>
+        <p>Copyright. &copy;</p>
+      </footer>
+
+    </div>
 
   </body>
 </html>
