--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>My Portfolio</title>
     <!-- <link rel="stylesheet" href="css/reset.css"> -->
     <link href="https://fonts.googleapis.com/css?family=Lora|Montez|Montserrat|Raleway|Shadows+Into+Light+Two" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
@@ -15,12 +15,12 @@
     <div class="container">
       <header class="row">
         <!-- logo -->
-        <div class="col-xs-4 col-sm-2">
+        <div class="col-sm-4 col-md-2">
           <img src="img/logo.png" alt="udacity logo" class="logo-img">
         </div>
         <!-- name -->
-        <div class="col-xs-8 col-sm-10">
-          <h1 class="text-right text-uppercase">Amina Arkoub</h1>
+        <div class="col-sm-8 col-md-10">
+          <h1 class="text-right text-uppercase mt-3">Amina Arkoub</h1>
           <h4 class="text-right text-uppercase">Front-end web developer</h4>
         </div>
       </header>
@@ -28,45 +28,45 @@
       <hr>
 
       <section class="row">
-        <div class="col-xs-12">
-          <img src="img/html.jpeg" class="rounded-circle" alt="laptop, pen,and html book">
+        <div class="col-sm-12">
+          <img src="img/html.jpeg" class="banner-img rounded" alt="laptop, pen,and html book">
         </div>
       </section>
 
       <section>
 
         <header class="row">
-          <div class="col-xs-12">
-            <h2 class="text-uppercase m-3">Featured Projects</h2>
+          <div class="col-sm-12">
+            <h2 class="text-uppercase m-3" id="featured-projects">Featured Projects</h2>
           </div>
         </header>
 
-        <main class="row">
-          <div class="card col-xs-4">
-            <img class="card-img-top" src="img/sunflower.jpeg" alt="Card image cap">
+        <div class="row" id="projects">
+          <div class="card col-sm-4">
+            <img class="card-img-top" src="img/search.jpg" alt="Card image cap">
+            <div class="card-block">
+              <h4 class="card-title">Animal trading card</h4>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">View</a>
+            </div>
+          </div>
+          <div class="card col-sm-4">
+            <img class="card-img-top" src="img/search.jpg" alt="Card image cap">
             <div class="card-block">
               <h4 class="card-title">Card title</h4>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn btn-primary">View</a>
             </div>
           </div>
-          <div class="card col-xs-4">
-            <img class="card-img-top" src="img/sunflower.jpeg" alt="Card image cap">
+          <div class="card col-sm-4">
+            <img class="card-img-top" src="img/search.jpg" alt="Card image cap">
             <div class="card-block">
               <h4 class="card-title">Card title</h4>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn btn-primary">View</a>
             </div>
           </div>
-          <div class="card col-xs-4">
-            <img class="card-img-top" src="img/sunflower.jpeg" alt="Card image cap">
-            <div class="card-block">
-              <h4 class="card-title">Card title</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-        </main>
+        </div>
 
       </section>
 
