--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 
         <div class="row" id="projects">
           <div class="card col-sm-4">
-            <img class="card-img-top" src="img/search.jpg" alt="Card image cap">
+            <img class="card-img-top" src="img/giraffe1.jpeg" alt="Card image cap">
             <div class="card-block">
               <h4 class="card-title">Animal trading card</h4>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">View</a>
+              <a href="https://zhoa15.github.io/animalCard/" class="btn btn-primary">View</a>
             </div>
           </div>
           <div class="card col-sm-4">
