--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
       <header class="row">
         <!-- logo -->
         <div class="col-sm-4 col-md-2">
-          <img src="img/logo.png" alt="udacity logo" class="logo-img">
+          <a href="https://de.udacity.com/"><img src="img/logo.png" alt="udacity logo" class="logo-img"></a>
         </div>
         <!-- name -->
         <div class="col-sm-8 col-md-10">
-          <h1 class="text-right text-uppercase mt-3">Amina Arkoub</h1>
+          <a href="https://github.com/zhoa15/"><h1 class="text-right text-uppercase mt-3">Amina Arkoub</h1></a>
           <h4 class="text-right text-uppercase">Front-end web developer</h4>
         </div>
       </header>
@@ -29,7 +29,7 @@
 
       <section class="row">
         <div class="col-sm-12">
-          <img src="img/html.jpeg" class="banner-img rounded" alt="laptop, pen,and html book">
+          <img src="img/jumbo.jpeg" class="banner-img rounded" alt="laptop, pen,and html book">
         </div>
       </section>
 
@@ -43,27 +43,27 @@
 
         <div class="row" id="projects">
           <div class="card col-sm-4">
-            <img class="card-img-top" src="img/giraffe1.jpeg" alt="Card image cap">
+            <img class="card-img-top" src="img/giraffes.jpeg" alt="Card image cap">
             <div class="card-block">
               <h4 class="card-title">Animal trading card</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="https://zhoa15.github.io/animalCard/" class="btn btn-primary">View</a>
+              <p class="card-text">Learn a funny fact about giraffes. Did you know that giraffes don't sleep more than ...</p>
+              <a target="_blank" href="https://zhoa15.github.io/animalCard/" class="btn btn-primary">Learn more</a>
             </div>
           </div>
           <div class="card col-sm-4">
-            <img class="card-img-top" src="img/search.jpg" alt="Card image cap">
+            <img class="card-img-top" src="img/game.jpeg" alt="Card image cap">
             <div class="card-block">
-              <h4 class="card-title">Card title</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">View</a>
+              <h4 class="card-title">Match Game</h4>
+              <p class="card-text">The game everyone likes to play. Easy, affordable and a lot of fun. More, it's brain training.</p>
+              <a target="_blank" href="https://zhoa15.github.io/match-game/" class="btn btn-primary">Learn more</a>
             </div>
           </div>
           <div class="card col-sm-4">
-            <img class="card-img-top" src="img/search.jpg" alt="Card image cap">
+            <img class="card-img-top" src="img/study.jpg" alt="Card image cap">
             <div class="card-block">
-              <h4 class="card-title">Card title</h4>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">View</a>
+              <h4 class="card-title">Colmar Academy</h4>
+              <p class="card-text">Lifelong learning is the new tren and technology makes it accessible to everyone anytime anywhere.</p>
+              <a target="_blank" href="https://zhoa15.github.io/colmar-academy/" class="btn btn-primary">Learn more</a>
             </div>
           </div>
         </div>
