--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <div class="container">
       <header class="row">
         <!-- logo -->
-        <div class="col-sm-4 col-md-2">
+        <div class="col-4">
           <a href="https://de.udacity.com/"><img src="img/logo.png" alt="udacity logo" class="logo-img"></a>
         </div>
         <!-- name -->
-        <div class="col-sm-8 col-md-10">
+        <div class="col-8">
           <a href="https://github.com/zhoa15/"><h1 class="text-right text-uppercase mt-3">Amina Arkoub</h1></a>
           <h4 class="text-right text-uppercase">Front-end web developer</h4>
         </div>
@@ -42,28 +42,28 @@
         </header>
 
         <div class="row" id="projects">
-          <div class="card col-sm-4">
+          <div class="card col-sm-12 col-md-4">
             <img class="card-img-top" src="img/giraffes.jpeg" alt="Card image cap">
             <div class="card-block">
               <h4 class="card-title">Animal trading card</h4>
               <p class="card-text">Learn a funny fact about giraffes. Did you know that giraffes don't sleep more than ...</p>
-              <a target="_blank" href="https://zhoa15.github.io/animalCard/" class="btn btn-primary">Learn more</a>
+              <a href="https://zhoa15.github.io/animalCard/" class="btn btn-primary">Learn more</a>
             </div>
           </div>
-          <div class="card col-sm-4">
+          <div class="card col-sm-12 col-md-4">
             <img class="card-img-top" src="img/game.jpeg" alt="Card image cap">
             <div class="card-block">
               <h4 class="card-title">Match Game</h4>
               <p class="card-text">The game everyone likes to play. Easy, affordable and a lot of fun. More, it's brain training.</p>
-              <a target="_blank" href="https://zhoa15.github.io/match-game/" class="btn btn-primary">Learn more</a>
+              <a href="https://zhoa15.github.io/match-game/" class="btn btn-primary">Learn more</a>
             </div>
           </div>
-          <div class="card col-sm-4">
+          <div class="card col-sm-12 col-md-4">
             <img class="card-img-top" src="img/study.jpg" alt="Card image cap">
             <div class="card-block">
               <h4 class="card-title">Colmar Academy</h4>
-              <p class="card-text">Lifelong learning is the new tren and technology makes it accessible to everyone anytime anywhere.</p>
-              <a target="_blank" href="https://zhoa15.github.io/colmar-academy/" class="btn btn-primary">Learn more</a>
+              <p class="card-text">Lifelong learning is the new trend and technology makes it accessible to everyone anytime anywhere.</p>
+              <a href="https://zhoa15.github.io/colmar-academy/" class="btn btn-primary">Learn more</a>
             </div>
           </div>
         </div>
@@ -73,7 +73,7 @@
       <hr>
 
       <footer>
-        <p>Copyright. &copy;</p>
+        <p>&copy; All rights reserved.</p>
       </footer>
 
     </div>
