--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
       <section class="row">
         <div class="col-sm-12">
-          <img src="img/jumbo.jpeg" class="banner-img rounded" alt="laptop, pen,and html book">
+          <img src="img/banner.jpeg" class="banner-img rounded" alt="laptop, pen,and html book">
         </div>
       </section>
 
