--- a/index.html
+++ b/index.html
@@ -28,8 +28,14 @@
       <hr>
 
       <section class="row">
-        <div class="col-sm-12">
-          <img src="img/banner.jpeg" class="banner-img rounded" alt="laptop, pen,and html book">
+        <div class="col-sm-12 overlay-container">
+          <img src="img/banner.jpeg" class="banner-img" alt="pen and paper">
+          <div class="overlay-text-intro">
+            Hello, I am Amina ...
+          </div>
+          <div class="overlay-text">
+            ... and it all started with a <br>pen & paper.
+          </div>
         </div>
       </section>
 
@@ -43,7 +49,9 @@
 
         <div class="row" id="projects">
           <div class="card col-sm-12 col-md-4">
-            <img class="card-img-top" src="img/giraffes.jpeg" alt="Card image cap">
+            <div class="card-img-wrap">
+              <img class="card-img-top" src="img/giraffes.jpeg" alt="Card image cap">
+            </div>
             <div class="card-block">
               <h4 class="card-title">Animal trading card</h4>
               <p class="card-text">Learn a funny fact about giraffes. Did you know that giraffes don't sleep more than ...</p>
@@ -51,7 +59,9 @@
             </div>
           </div>
           <div class="card col-sm-12 col-md-4">
-            <img class="card-img-top" src="img/game.jpeg" alt="Card image cap">
+            <div class="card-img-wrap">
+              <img class="card-img-top" src="img/game.jpeg" alt="Card image cap">
+            </div>
             <div class="card-block">
               <h4 class="card-title">Match Game</h4>
               <p class="card-text">The game everyone likes to play. Easy, affordable and a lot of fun. More, it's brain training.</p>
@@ -59,7 +69,9 @@
             </div>
           </div>
           <div class="card col-sm-12 col-md-4">
-            <img class="card-img-top" src="img/study.jpg" alt="Card image cap">
+            <div class="card-img-wrap">
+              <img class="card-img-top" src="img/study.jpg" alt="Card image cap">
+            </div>
             <div class="card-block">
               <h4 class="card-title">Colmar Academy</h4>
               <p class="card-text">Lifelong learning is the new trend and technology makes it accessible to everyone anytime anywhere.</p>
